--- a/cart.html
+++ b/cart.html
@@ -26,11 +26,6 @@
 
   <div class="mt-6 flex flex-col items-end space-y-4 w-full max-w-md mx-auto">
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
-    
-    <!-- Existing Stripe Checkout button -->
-    <button id="checkout-btn" class="px-6 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 w-full sm:w-auto">
-      Checkout
-    </button>
 
     <!-- Payment selection -->
     <div class="mt-4 w-full">
@@ -67,20 +62,19 @@
         Proceed to Checkout
       </button>
 
-      <!-- PayPal Buttons -->
-      <div id="paypal-buttons-container" class="mt-4 w-full flex flex-col space-y-2"></div>
+      <!-- PayPal button -->
+      <div id="paypal-button-container" class="mt-6 w-full"></div>
 
     </div>
   </div>
 </main>
 
-<!-- Optional footer -->
 <footer class="bg-gradient-to-r from-green-100 to-blue-100 py-6 text-center text-gray-700">
   © 2025 DjsDopeDesigns — All Rights Reserved
 </footer>
 
 <!-- PayPal SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&components=buttons,messages&currency=USD"></script>
+<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD"></script>
 
 <script>
 // Load cart from localStorage
@@ -118,100 +112,45 @@ function renderCartItems() {
   window.cartTotal = total.toFixed(2);
 }
 
-// Cart manipulation functions
-function increaseQuantity(index){
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  cart[index].quantity++;
-  localStorage.setItem("cart", JSON.stringify(cart));
-  renderCartItems();
-}
-
-function decreaseQuantity(index){
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart[index].quantity > 1){
-    cart[index].quantity--;
-  } else {
-    cart.splice(index,1);
-  }
-  localStorage.setItem("cart", JSON.stringify(cart));
-  renderCartItems();
-}
-
-function removeItem(index){
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  cart.splice(index,1);
-  localStorage.setItem("cart", JSON.stringify(cart));
-  renderCartItems();
-}
+// Cart functions
+function increaseQuantity(index){ let cart = JSON.parse(localStorage.getItem("cart")) || []; cart[index].quantity++; localStorage.setItem("cart", JSON.stringify(cart)); renderCartItems(); }
+function decreaseQuantity(index){ let cart = JSON.parse(localStorage.getItem("cart")) || []; if(cart[index].quantity>1){cart[index].quantity--;}else{cart.splice(index,1);} localStorage.setItem("cart", JSON.stringify(cart)); renderCartItems(); }
+function removeItem(index){ let cart = JSON.parse(localStorage.getItem("cart")) || []; cart.splice(index,1); localStorage.setItem("cart", JSON.stringify(cart)); renderCartItems(); }
 
 // Initial render
 renderCartItems();
 
-// Stripe Checkout
-document.getElementById("checkout-btn").addEventListener("click", async () => {
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart.length === 0){
-    alert("Your cart is empty!");
-    return;
-  }
-  try {
-    const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ items: cart })
-    });
-    const data = await res.json();
-    if(data.url) window.location.href = data.url;
-  } catch(err){
-    console.error("Stripe checkout error:", err);
-    alert("Failed to start Stripe checkout.");
-  }
-});
-
-// Proceed to checkout based on selected payment
+// Proceed to checkout based on selection
 document.getElementById("proceed-btn").addEventListener("click", async () => {
   const selected = document.querySelector('input[name="payment"]:checked');
-  if (!selected) {
-    alert("Please select a payment method!");
-    return;
-  }
+  if(!selected){ alert("Please select a payment method!"); return; }
 
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart.length === 0){
-    alert("Your cart is empty!");
-    return;
-  }
+  if(cart.length===0){ alert("Your cart is empty!"); return; }
 
   switch(selected.value){
     case "stripe":
     case "googlepay":
     case "applepay":
-      // Stripe checkout
       try {
         const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ items: cart, paymentMethod: selected.value })
+          method:"POST",
+          headers:{"Content-Type":"application/json"},
+          body:JSON.stringify({ items: cart, paymentMethod: selected.value })
         });
         const data = await res.json();
         if(data.url) window.location.href = data.url;
-      } catch(err){
-        console.error("Stripe checkout error:", err);
-        alert("Failed to start Stripe checkout.");
-      }
+      } catch(err){ console.error(err); alert("Failed to start Stripe checkout."); }
       break;
   }
 });
 
-// Render original 3 PayPal buttons
+// Render PayPal button at bottom
 paypal.Buttons({
     style: { layout: 'vertical', shape: 'rect', label: 'paypal' },
-    fundingSource: paypal.FUNDING.PAYPAL,
     createOrder: function(data, actions) {
         return actions.order.create({
-            purchase_units: [{
-                amount: { value: window.cartTotal || '0.00' }
-            }]
+            purchase_units: [{ amount: { value: window.cartTotal || '0.00' } }]
         });
     },
     onApprove: function(data, actions) {
@@ -221,18 +160,7 @@ paypal.Buttons({
             window.location.href = "thankyou.html";
         });
     }
-}).render('#paypal-buttons-container');
-
-paypal.Buttons({
-    style: { layout: 'vertical', shape: 'rect', label: 'paylater', tagline: false },
-    fundingSource: paypal.FUNDING.PAYLATER
-}).render('#paypal-buttons-container');
-
-paypal.Buttons({
-    style: { layout: 'vertical', shape: 'rect', label: 'credit' },
-    fundingSource: paypal.FUNDING.CARD
-}).render('#paypal-buttons-container');
-
+}).render('#paypal-button-container');
 </script>
 
 </body>
