Updated product page with Tailwind + Alpine sliding cart

--- a/cart.html
+++ b/cart.html
@@ -62,6 +62,11 @@
         Proceed to Checkout
       </button>
 
+<!-- Divider -->
+<div class="my-4 text-center text-gray-500 font-bold">
+  ----------- or -----------
+</div>
+
       <!-- PayPal button -->
       <div id="paypal-button-container" class="mt-6 w-full"></div>
 
