Updated product page with Tailwind + Alpine sliding cart

--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,7 @@
         <!-- Google Pay -->
         <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
           <input type="radio" name="payment" value="googlepay" class="form-radio h-5 w-5">
-          <img src="https://img.icons8.com/color/48/google-pay.png" class="h-8" alt="Google Pay">
+          <img src="https://www.svgrepo.com/show/303357/google-pay-primary-logo-logo.svg" class="h-8" alt="Google Pay">
         </label>
 
         <!-- Apple Pay -->
