Updated product page with Tailwind + Alpine sliding cart

--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
 <body>
 
 <header class="header">
-  <a href="index.html" class="logo">DjsDopeDesigns</a>
+  <!-- Replace text with an image -->
+    <a href="index.html">
+      <img src="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/24e4541a-a7a9-4c24-83b5-7a8e2da8621c/djs+dope+deisgn+banner.png?format=2500w" 
+           alt="DjsDopeDesigns Logo" 
+           class="h-12">
+    </a>
   <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
 
