--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Cart — DjsDopeDesigns</title>
+<link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
