Updated product page with Tailwind + Alpine sliding cart

--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
 <body>
 
 <header class="header">
-  <!-- Replace text with an image -->
+  <!-- Use logo from assets folder -->
     <a href="index.html">
-      <img src="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/341108ec-33ea-4186-91b2-f2e597952c73/1.png?format=2500w" 
-           alt="DjsDopeDesigns Logo" 
-           class="h-12">
+      <img src="assets/1.png" alt="DjsDopeDesigns Logo" class="h-12">
     </a>
   <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
