Updated product page with Tailwind + Alpine sliding cart

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <header class="header">
   <!-- Use logo from assets folder -->
     <a href="index.html">
-      <img src="assets/1.jpg" alt="DjsDopeDesigns Logo" class="h-12">
+      <img src="assets/6.png" alt="DjsDopeDesigns Logo" 
+     style="max-height: 80px; max-width: 300px;">
     </a>
   <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
