Updated product page with Tailwind + Alpine sliding cart

--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,10 @@
 <!-- Header -->
 <header class="bg-white shadow sticky top-0 z-50">
   <div class="container mx-auto flex justify-between items-center px-4 py-4">
-    <a href="index.html" class="text-xl font-bold">DjsDopeDesigns</a>
+    <a href="index.html">
+      <img src="assets/6.png" alt="DjsDopeDesigns Logo" 
+     style="max-height: 80px; max-width: 300px;">
+    </a>
     <button @click="cartOpen = !cartOpen" class="relative text-gray-700 text-xl">
       🛒
       <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
