--- a/cart.html
+++ b/cart.html
@@ -163,12 +163,24 @@ paypal.Buttons({
         });
     },
     onApprove: function(data, actions) {
-        return actions.order.capture().then(function(details) {
-            alert('Transaction completed by ' + details.payer.name.given_name + ' ✅');
-            localStorage.removeItem('cart');
-            window.location.href = "thankyou.html";
-        });
-    }
+    return actions.order.capture().then(function(details) {
+        // Grab cart from localStorage
+        let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+        // Extract product IDs
+        let productIds = cart.map(item => item.id).join(",");
+
+        // Clear the cart
+        localStorage.removeItem("cart");
+
+        // Redirect to download-success page with product IDs
+        if (productIds) {
+            window.location.href = `download-success.html?products=${productIds}`;
+        } else {
+            window.location.href = "download-success.html";
+        }
+    });
+}
 }).render('#paypal-button-container');
 </script>
 
