Updated product page with Tailwind + Alpine sliding cart

--- a/download-success.html
+++ b/download-success.html
@@ -62,7 +62,10 @@
 </head>
 <body>
 <header class="header">
-  <a href="index.html" class="site-title">DjsDopeDesigns</a>
+  <a href="index.html">
+      <img src="assets/6.png" alt="DjsDopeDesigns Logo" 
+     style="max-height: 80px; max-width: 300px;">
+    </a>
 </header>
 <h1>✅ Thank you for your purchase! Click the buttons below to download your items.</h1>
 <div class="downloads-section">
