--- a/product.html
+++ b/product.html
@@ -31,114 +31,137 @@
   </div>
 
   <script>
-    let products = [];
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+let products = [];
+const params = new URLSearchParams(window.location.search);
+const featuredSlug = params.get('slug') || null;
 
-    // Toggle cart sidebar
-    function toggleCart() {
-      const sidebar = document.getElementById("cart-sidebar");
-      sidebar.classList.toggle("translate-x-full");
-    }
-
-    // Load products JSON + display selected product
-    async function loadProduct() {
-      const urlParams = new URLSearchParams(window.location.search);
-      const slug = urlParams.get("slug");
-
-      const res = await fetch("products.json");
-      products = await res.json();
-
-      const product = products.find(p => p.slug === slug);
-      const container = document.getElementById("product-container");
-
-      if (!product) {
-        container.innerHTML = `<p class="text-red-500">Product not found.</p>`;
-        return;
-      }
-
-      document.title = product.seoTitle + " | DJS Dope Designs";
-
-      container.innerHTML = `
-        <img src="${product.image}" alt="${product.name}" class="mx-auto max-h-96 object-contain mb-6 rounded-lg shadow">
-        <h1 class="text-3xl font-bold mb-2">${product.name}</h1>
-        <p class="text-gray-600 mb-4">${product.description}</p>
-        <p class="text-xl font-semibold mb-6">$${(product.price/100).toFixed(2)}</p>
-        <div class="flex justify-center space-x-4">
-          <button onclick="addToCart('${product.slug}')" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">Add to Cart</button>
-          <button onclick="buyNow('${product.slug}')" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700">Order Now</button>
-        </div>
-      `;
-    }
-
-    // ==== CART FUNCTIONS ====
-    function addToCart(slug) {
-      const product = products.find(p => p.slug === slug);
-      if (!product) return;
-
-      const existing = cart.find(item => item.slug === slug);
-      if (existing) {
-        existing.quantity += 1;
-      } else {
-        cart.push({ ...product, quantity: 1 });
-      }
-
-      saveCart();
-      updateCartCount();
-      renderCartItems();
-      alert(`${product.name} added to cart!`);
-    }
-
-    function buyNow(slug) {
-      addToCart(slug);
-      window.location.href = "checkout.html"; // 👈 update if your checkout page is different
-    }
-
-    function saveCart() {
-      localStorage.setItem("cart", JSON.stringify(cart));
-    }
-
-    function updateCartCount() {
-      document.getElementById("cart-count").textContent = cart.reduce((sum, item) => sum + item.quantity, 0);
-    }
-
-    function renderCartItems() {
-      const container = document.getElementById("cart-items");
-      container.innerHTML = "";
-      let total = 0;
-
-      cart.forEach((item, index) => {
-        total += item.price * item.quantity;
-        const div = document.createElement("div");
-        div.className = "flex items-center space-x-4";
-        div.innerHTML = `
-          <img src="${item.image}" alt="${item.name}" class="w-16 h-16 object-contain rounded">
-          <div class="flex-1">
-            <div class="font-medium">${item.name}</div>
-            <div class="text-gray-500 text-sm">$${(item.price/100).toFixed(2)} x ${item.quantity}</div>
-          </div>
-          <button onclick="removeItem(${index})" class="text-red-500">✕</button>
-        `;
-        container.appendChild(div);
-      });
-
-      document.getElementById("cart-total").textContent = `Total: $${(total/100).toFixed(2)}`;
-    }
-
-    function removeItem(index) {
-      cart.splice(index, 1);
-      saveCart();
-      updateCartCount();
-      renderCartItems();
-    }
-
-    function checkout() {
-      window.location.href = "checkout.html";
-    }
-
-    // ==== INIT ====
-    loadProduct();
+// Load products.json and render products
+async function loadProducts() {
+  try {
+    const res = await fetch('products.json');
+    products = await res.json();
+    renderFeatured();
+    renderOtherProducts(products.filter(p => p.slug !== featuredSlug));
     updateCartCount();
-    renderCartItems();
-  </script>
+  } catch(err) {
+    console.error("Failed to load products:", err);
+  }
+}
+
+// Featured product
+function renderFeatured() {
+  if(!featuredSlug) return;
+  const featured = products.find(p => p.slug === featuredSlug);
+  if(!featured) return;
+
+  document.title = `${featured.name} | DjsDopeDesigns`;
+
+  const container = document.getElementById("featured-product");
+  container.innerHTML = `
+    <div class="bg-white/80 rounded-lg shadow-md max-w-6xl w-full flex flex-col md:flex-row md:space-x-6 p-4">
+      <div class="md:w-1/2 w-full">
+        <img src="${featured.image}" alt="${featured.name}" class="w-full h-auto object-contain rounded-lg">
+      </div>
+      <div class="md:w-1/2 w-full mt-4 md:mt-0 flex flex-col justify-between relative">
+        <div>
+          <h1 class="text-3xl font-bold text-gray-800 mb-2">${featured.name}</h1>
+          <p class="text-gray-500 text-xl mb-4">$${(featured.price/100).toFixed(2)}</p>
+          <p class="text-gray-700 mb-6">${featured.description}</p>
+        </div>
+        <div class="flex flex-col md:flex-row md:space-x-2 space-y-2 md:space-y-0 fixed bottom-0 left-0 right-0 md:static md:mt-4 bg-white md:bg-transparent p-4 md:p-0 shadow md:shadow-none">
+          <button onclick="orderNow('${featured.slug}')" class="flex-1 bg-indigo-600 text-white px-4 py-3 rounded hover:bg-indigo-500 text-lg font-semibold">Order Now</button>
+          <button onclick="addToCart('${featured.slug}')" class="flex-1 bg-gray-200 px-4 py-3 rounded hover:bg-gray-300 text-lg font-semibold">🛒 Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  `;
+}
+
+// Other products
+function renderOtherProducts(filteredProducts) {
+  const otherContainer = document.getElementById("other-products");
+  otherContainer.innerHTML = '';
+  filteredProducts.forEach(p => {
+    const div = document.createElement('div');
+    div.className = "bg-white/80 p-4 rounded-lg shadow-md flex flex-col items-center justify-between";
+    div.innerHTML = `
+      <div class="w-full aspect-w-1 aspect-h-1 mb-2">
+        <img src="${p.image}" alt="${p.name}" class="w-full h-full object-contain rounded">
+      </div>
+      <div class="text-sm font-medium text-gray-700 mb-1">${p.name}</div>
+      <div class="text-sm text-gray-500 mb-2">$${(p.price/100).toFixed(2)}</div>
+      <div class="flex space-x-2">
+        <a href="?slug=${p.slug}" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm hover:bg-indigo-500">View</a>
+        <button onclick="addToCart('${p.slug}')" class="bg-gray-200 px-2 py-1 rounded hover:bg-gray-300">🛒</button>
+      </div>
+    `;
+    otherContainer.appendChild(div);
+  });
+}
+
+// ===== Cart Functions =====
+function getCart() {
+  return JSON.parse(localStorage.getItem("cart")) || [];
+}
+
+function saveCart(cart) {
+  localStorage.setItem("cart", JSON.stringify(cart));
+  updateCartCount();
+}
+
+function updateCartCount() {
+  const cart = getCart();
+  const count = cart.reduce((sum, item) => sum + item.quantity, 0);
+  document.getElementById("cart-count").textContent = count;
+}
+
+function addToCart(slug) {
+  const product = products.find(p => p.slug === slug);
+  if(!product) return;
+
+  let cart = getCart();
+  const existing = cart.find(item => item.slug === slug);
+  if(existing) {
+    existing.quantity += 1;
+  } else {
+    cart.push({ ...product, quantity: 1 });
+  }
+  saveCart(cart);
+  alert(`${product.name} added to cart!`);
+}
+
+function orderNow(slug) {
+  addToCart(slug);
+  window.location.href = "cart.html"; // redirect to cart page
+}
+
+// ===== Search Bar =====
+function filterProducts() {
+  const query = document.getElementById("searchInput").value.toLowerCase();
+  const preview = document.getElementById("searchPreview");
+  if (!query) { preview.classList.add("hidden"); return; }
+  const filtered = products.filter(p => p.name.toLowerCase().startsWith(query));
+  if(filtered.length === 0) {
+    preview.innerHTML = `<div class="p-2 text-gray-500">No results</div>`;
+  } else {
+    preview.innerHTML = filtered.map(p => `
+      <a href="?slug=${p.slug}" class="flex items-center space-x-3 p-2 hover:bg-gray-100 rounded" onclick="document.getElementById('searchPreview').classList.add('hidden')">
+        <img src="${p.image}" alt="${p.name}" class="w-10 h-10 object-contain rounded">
+        <span class="text-gray-700">${p.name}</span>
+      </a>
+    `).join("");
+  }
+  preview.classList.remove("hidden");
+}
+
+document.addEventListener("click", (e) => {
+  if (!document.getElementById("searchInput").contains(e.target) &&
+      !document.getElementById("searchPreview").contains(e.target)) {
+    document.getElementById("searchPreview").classList.add("hidden");
+  }
+});
+
+loadProducts();
+</script>
 </body>
 </html>
