--- a/product.html
+++ b/product.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{ cartOpen: false }" class="bg-gray-100">
+<html lang="en">
 <head>
   <!-- ====== HEAD SECTION ====== -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
   <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/5559fdd6e4b0e3eb2cfa9394/64fb3589-910a-41d7-8767-d1e72606ffdb/Cartoon+women.PNG?format=2500w">
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
   <style>
@@ -20,10 +19,10 @@
   <header class="bg-white shadow sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center px-4 py-4">
       <a href="index.html" class="text-xl font-bold">DjsDopeDesigns</a>
-      <button @click="cartOpen = !cartOpen" class="relative text-gray-700 text-xl">
+      <a href="cart.html" class="relative text-gray-700 text-xl">
         🛒
         <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white rounded-full text-xs px-2">0</span>
-      </button>
+      </a>
     </div>
   </header>
 
@@ -45,21 +44,6 @@
   <!-- ====== OTHER PRODUCTS ====== -->
   <div class="container mx-auto px-4 mt-8">
     <div id="other-products" class="grid grid-cols-2 md:grid-cols-4 gap-6 justify-center"></div>
-  </div>
-
-  <!-- ====== SLIDING CART ====== -->
-  <div :class="cartOpen ? 'translate-x-0 ease-out' : 'translate-x-full ease-in'" 
-       class="fixed right-0 top-0 max-w-xs w-full h-full px-6 py-4 transition transform bg-white border-l-2 border-gray-300 overflow-y-auto z-50">
-    <div class="flex justify-between items-center">
-      <h3 class="text-2xl font-medium text-gray-700">Your cart</h3>
-      <button @click="cartOpen = !cartOpen" class="text-gray-600 focus:outline-none">✕</button>
-    </div>
-    <hr class="my-3">
-    <div id="cart-items" class="space-y-6"></div>
-    <div class="mt-4 text-lg font-bold text-gray-700 text-right" id="cart-total">Total: $0.00</div>
-    <div class="mt-2 flex justify-center">
-      <button id="checkout-btn" class="flex items-center px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
-    </div>
   </div>
 
   <!-- ====== FOOTER ====== -->
